# mf4_to_databricks

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: .gitkeep
src/mf4_to_databricks/: __init__.py  __main__.py  analyze_mf4.py  converter.py
src/mf4_to_databricks/gui/: __init__.py  app.py
tests/: __init__.py
